# prebuild

./: .gitmodules  Cargo.toml  README.md  cspell.json  generate.rs
built/: ansi.tmTheme  syntaxes
src/: lib.rs
