[package]
name        = "yazi-prebuild"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
homepage    = "https://github.com/sxyazi/yazi"
repository  = "https://github.com/yazi-rs/prebuild"
description = "Used to place the pre-built assets of yazi (https://github.com/sxyazi/yazi)."
exclude     = [
	"syntaxes/*",
	"cspell.json"
]

[dependencies]
anyhow  = "^1"
syntect = "^5"
walkdir = "2.3.3"

[[bin]]
name = "generate"
path = "generate.rs"
