[package]
name        = "yazi-prebuilt"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
homepage    = "https://github.com/sxyazi/yazi"
repository  = "https://github.com/yazi-rs/prebuilt"
description = "Used to place the pre-built assets of yazi (https://github.com/sxyazi/yazi)."
exclude     = [
	"syntaxes/*",
	"cspell.json"
]

[dependencies]
anyhow  = { version = "^1", optional = true }
syntect = { version = "^5", optional = true }
walkdir = { version = "^2", optional = true }

[features]
build_deps = [ "anyhow", "syntect", "walkdir" ]

[[bin]]
name              = "generate"
path              = "generate.rs"
required-features = [ "build_deps" ]
